--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "consoles-ai",
-  "version": "0.0.4",
+  "name": "@consoles-ai/sdk",
+  "version": "0.0.3",
   "description": "ConsolesAI SDK and CLI tool",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
