fix(action): update workflow with build

--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "npm": "^10.8.1",
     "open": "^10.1.0",
     "os": "^0.1.2",
+    "typescript": "^5.4.5",
     "zod": "^3.23.8",
     "zod-to-json-schema": "^3.23.0"
   },
