--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -37,5 +37,5 @@ jobs:
           registry-url: 'https://registry.npmjs.org'
       - name: Set up .npmrc
         run: echo "//registry.npmjs.org/:_authToken=${{ secrets.NPM_REGISTRY }}" > ~/.npmrc
-      - run: npm i
+      - run: npm i && npm run build
       - run: npm publish --access public
