--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -37,3 +37,5 @@ jobs:
           echo "//registry.npmjs.org/:_authToken=${{ secrets.NPM_REGISTRY }}" > ~/.npmrc
           npm i && npm run build
           npm publish --access public
+        env:
+          NODE_AUTH_TOKEN:  ${{ secrets.NPM_TOKEN }}
