fix(ci): NPM_REGISTRY not NPM_TOKEN

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -38,4 +38,4 @@ jobs:
           npm i && npm run build
           npm publish --access public
         env:
-          NODE_AUTH_TOKEN:  ${{ secrets.NPM_TOKEN }}
+          NODE_AUTH_TOKEN:  ${{ secrets.NPM_REGISTRY }}
