--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "bin": {
-    "consoles-ai": "cli/cli.js"
+    "consoles-ai": "cli/index.js"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
