big fix for glitches

--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "esbuild": "^0.15.12",
     "figlet": "^1.7.0",
     "hono": "^4.3.7",
+    "inquirer": "^9.2.23",
     "install": "^0.13.0",
     "npm": "^10.8.1",
     "open": "^10.1.0",
