--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.53",
   "description": "ConsolesAI SDK and CLI tool",
   "main": "index.ts",
-  "types": "types/typ.d.ts",
+  "types": "types/types.d.ts",
   "bin": {
     "consoles-ai": "cli/index.js"
   },
