--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "consoles-ai",
-  "version": "0.0.55",
+  "version": "0.0.57",
   "description": "ConsolesAI SDK and CLI tool",
-  "main": "index.ts",
-  "types": "types/types.d.ts",
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
   "bin": {
     "consoles-ai": "cli/index.js"
   },
