--- a/tsconfig.build.json
+++ b/tsconfig.build.json
@@ -5,7 +5,9 @@
       "rootDir": "./src/",
       "outDir": "./dist/",
       "noUnusedLocals": true,
-      "noUnusedParameters": true
+      "noUnusedParameters": true,
+      "noEmitOnError": false,
+      "skipLibCheck": true
     },
     "include": [
       "src/**/*.ts",
