--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,10 +3,10 @@
     "target": "ES2022",
     "moduleResolution": "Bundler",
     "outDir": "./dist",
+    "rootDir": "./src",
     "declaration": true,
     "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
-    "strict": true,
     "skipLibCheck": false,
     "noUnusedLocals": false,
     "noUnusedParameters": false,
@@ -21,7 +21,6 @@
     "src/**/*.ts",
     "src/**/*.d.ts",
     "src/**/*.mts",
-    "src/**/*.tsx",
-    "src/types/*.d.ts" // Add this line
+    "src/**/*.tsx"
   ]
 }
