--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   },
   "scripts": {
     "build": "rimraf dist && tsc --project tsconfig.build.json && mkdir -p dist/cjs && cp ./package.cjs.json ./dist/cjs/package.json",
-    "build:watch": "rimraf dist && tsc --watch --project tsconfig.build.json"
+    "build:watch": "rimraf dist && tsc --watch --project tsconfig.build.json",
+    "lint": "eslint . --ext .ts,.js",
+    "format": "prettier --write ."
   },
   "repository": {
     "type": "git",
@@ -37,7 +39,6 @@
     "chalk": "^5.3.0",
     "commander": "^12.0.0",
     "cowsay": "^1.6.0",
-    "esbuild": "^0.15.12",
     "figlet": "^1.7.0",
     "hono": "^4.3.7",
     "inquirer": "^9.2.23",
@@ -51,6 +52,9 @@
   "devDependencies": {
     "@types/figlet": "^1.5.8",
     "@types/node": "^20.12.12",
+    "esbuild": "^0.21.5",
+    "eslint": "^8.32.0",
+    "prettier": "^2.8.4",
     "rimraf": "^3.0.2"
   },
   "type": "module",
