--- a/package.json
+++ b/package.json
@@ -4,13 +4,13 @@
   "description": "ConsolesAI SDK and CLI tool",
   "main": "dist/cjs/index.js",
   "module": "dist/index.js",
-  "types": "dist/types.js",
+  "types": "dist/types/index.d.ts",
   "bin": {
     "consoles-ai": "cli/index.js"
   },
   "scripts": {
-    "build": "rimraf dist && tsc --project tsconfig.build.json && mkdir -p dist/cjs && cp ./package.cjs.json ./dist/cjs/package.json",
-    "build:watch": "rimraf dist && tsc --watch --project tsconfig.build.json",
+    "build": "rimraf dist && tsx build.ts",
+    "build:watch": "rimraf dist && tsx build.ts --watch",
     "lint": "eslint . --ext .ts,.js",
     "format": "prettier --write ."
   },
@@ -35,6 +35,7 @@
   "dependencies": {
     "@acusti/parsing": "^0.14.3",
     "@cloudflare/workers-types": "^4.20240605.0",
+    "arg": "^5.0.2",
     "axios": "^1.7.2",
     "chalk": "^5.3.0",
     "commander": "^12.0.0",
@@ -45,6 +46,7 @@
     "install": "^0.13.0",
     "open": "^10.1.0",
     "os": "^0.1.2",
+    "tsx": "^4.15.7",
     "typescript": "^5.4.5",
     "zod": "^3.23.8",
     "zod-to-json-schema": "^3.23.0"
@@ -64,6 +66,7 @@
   ],
   "exports": {
     ".": {
+      "types": "./dist/types/index.d.ts",
       "import": "./dist/index.js",
       "require": "./dist/cjs/index.js"
     }
