--- a/package.json
+++ b/package.json
@@ -36,18 +36,12 @@
     "@acusti/parsing": "^0.14.3",
     "@cloudflare/workers-types": "^4.20240605.0",
     "arg": "^5.0.2",
-    "axios": "^1.7.2",
     "chalk": "^5.3.0",
     "commander": "^12.0.0",
-    "cowsay": "^1.6.0",
     "figlet": "^1.7.0",
     "hono": "^4.3.7",
-    "inquirer": "^9.2.23",
-    "install": "^0.13.0",
     "open": "^10.1.0",
     "os": "^0.1.2",
-    "promisify": "^0.0.3",
-    "tsx": "^4.15.7",
     "typescript": "^5.4.5",
     "zod": "^3.23.8",
     "zod-to-json-schema": "^3.23.0"
@@ -60,6 +54,8 @@
     "esbuild": "^0.21.5",
     "eslint": "^8.32.0",
     "prettier": "^2.8.4",
+    "tsx": "^4.15.7",
+    "typescript": "^5.4.5",
     "rimraf": "^3.0.2"
   },
   "type": "module",
