--- a/package.json
+++ b/package.json
@@ -40,9 +40,9 @@
     "commander": "^12.0.0",
     "figlet": "^1.7.0",
     "hono": "^4.3.7",
+    "install": "^0.13.0",
     "open": "^10.1.0",
     "os": "^0.1.2",
-    "typescript": "^5.4.5",
     "zod": "^3.23.8",
     "zod-to-json-schema": "^3.23.0"
   },
@@ -54,9 +54,9 @@
     "esbuild": "^0.21.5",
     "eslint": "^8.32.0",
     "prettier": "^2.8.4",
+    "rimraf": "^3.0.2",
     "tsx": "^4.15.7",
-    "typescript": "^5.4.5",
-    "rimraf": "^3.0.2"
+    "typescript": "^5.4.5"
   },
   "type": "module",
   "files": [
