--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "hono": "^4.3.7",
     "install": "^0.13.0",
     "open": "^10.1.0",
+    "openai-zod-functions": "^0.1.2",
     "os": "^0.1.2",
     "zod": "^3.23.8",
     "zod-to-json-schema": "^3.23.0"
