--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
   "homepage": "https://github.com/consolesai/consoles-ai#readme",
   "dependencies": {
     "@acusti/parsing": "^0.14.3",
+    "@cloudflare/ai-utils": "^1.0.1",
     "@cloudflare/workers-types": "^4.20240605.0",
     "arg": "^5.0.2",
     "chalk": "^5.3.0",
