--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@acusti/parsing": "^0.14.3",
     "@cloudflare/ai-utils": "^1.0.1",
     "@cloudflare/workers-types": "^4.20240605.0",
+    "@google/generative-ai": "^0.14.1",
     "arg": "^5.0.2",
     "chalk": "^5.3.0",
     "commander": "^12.0.0",
