--- a/package.json
+++ b/package.json
@@ -33,9 +33,11 @@
   "homepage": "https://github.com/consolesai/consoles-ai#readme",
   "dependencies": {
     "@acusti/parsing": "^0.14.3",
+    "@ai16z/plugin-solana": "^0.1.6",
     "@cloudflare/ai-utils": "^1.0.1",
     "@cloudflare/workers-types": "^4.20240605.0",
     "@google/generative-ai": "^0.14.1",
+    "@solana/web3.js": "^1.98.0",
     "ai": "^4.0.13",
     "arg": "^5.0.2",
     "chalk": "^5.3.0",
