refactor: update build configuration and enhance API interactions
- Changed import statement for 'glob' in build.ts for consistency.
- Updated package.json to include new dependencies: @coral-xyz/anchor and pumpdotfun-sdk, and modified glob version.
- Revised tsconfig.json to use ESNext settings and added new compiler options for better type checking.
- Enhanced Extract and Storage classes to include API calls for extraction and storage operations.
- Cleaned up unused imports in web3/types.ts and improved type definitions in solana/index.ts.
- Added error handling and response parsing for API interactions in SolanaSDK.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,26 +1,27 @@
 {
   "compilerOptions": {
-    "target": "ES2022",
-    "moduleResolution": "Bundler",
+    "target": "ESNext",
+    "module": "ESNext",
+    "moduleResolution": "bundler",
+    "allowSyntheticDefaultImports": true,
+    "esModuleInterop": true,
+    "skipLibCheck": true,
+    "forceConsistentCasingInFileNames": true,
+    "resolveJsonModule": true,
+    "strict": true,
+    "noImplicitAny": false,
+    "paths": {
+      "@/*": ["./src/*"]
+    },
+    "typeRoots": ["./node_modules/@types", "./src/types"],
+    "declaration": true,
+    "declarationMap": true,
+    "sourceMap": true,
     "outDir": "./dist",
     "rootDir": "./src",
-    "declaration": true,
-    "esModuleInterop": true,
-    "forceConsistentCasingInFileNames": true,
-    "skipLibCheck": false,
-    "noUnusedLocals": false,
-    "noUnusedParameters": false,
-    "types": [
-      "node"
-    ],
-    "jsx": "react",
-    "jsxFactory": "jsx",
-    "jsxFragmentFactory": "Fragment"
+    "experimentalDecorators": true,
+    "emitDecoratorMetadata": true
   },
-  "include": [
-    "src/**/*.ts",
-    "src/**/*.d.ts",
-    "src/**/*.mts",
-    "src/**/*.tsx"
-, "src/types.ts", "src/index.ts"  ]
+  "include": ["src/**/*"],
+  "exclude": ["node_modules", "dist"]
 }
