--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@ai16z/plugin-solana": "^0.1.6",
     "@cloudflare/ai-utils": "^1.0.1",
     "@cloudflare/workers-types": "^4.20240605.0",
+    "@coral-xyz/anchor": "^0.29.0",
     "@google/generative-ai": "^0.14.1",
     "@solana/web3.js": "^1.98.0",
     "ai": "^4.0.13",
@@ -44,12 +45,13 @@
     "commander": "^12.0.0",
     "esbuild": "^0.21.5",
     "figlet": "^1.7.0",
-    "glob": "^11.0.0",
+    "glob": "^10.3.10",
     "hono": "^4.5.0",
     "install": "^0.13.0",
     "open": "^10.1.0",
     "openai-zod-functions": "^0.1.2",
     "os": "^0.1.2",
+    "pumpdotfun-sdk": "^1.3.2",
     "zod": "^3.23.8",
     "zod-to-json-schema": "^3.24.1"
   },
@@ -58,9 +60,9 @@
     "@types/figlet": "^1.5.8",
     "@types/glob": "^8.1.0",
     "@types/node": "^20.12.12",
-    "eslint": "^8.32.0",
+    "eslint": "^9.0.0",
     "prettier": "^2.8.4",
-    "rimraf": "^3.0.2",
+    "rimraf": "^5.0.5",
     "tsx": "^4.15.7",
     "typescript": "^5.4.5"
   },
@@ -75,5 +77,9 @@
       "import": "./dist/index.js",
       "require": "./dist/cjs/index.js"
     }
+  },
+  "resolutions": {
+    "@coral-xyz/anchor": "0.29.0",
+    "pumpdotfun-sdk/@coral-xyz/anchor": "0.29.0"
   }
 }
