(refactor) web3 overhaul

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "consoles-ai",
   "version": "0.1.43",
-  "description": "ConsolesAI SDK and CLI tool",
+  "description": "ConsolesAI SDK",
   "main": "dist/cjs/index.js",
   "module": "dist/index.js",
   "types": "dist/types/index.d.ts",
