--- a/package.json
+++ b/package.json
@@ -41,15 +41,19 @@
     "@solana/web3.js": "^1.98.0",
     "ai": "^4.0.13",
     "arg": "^5.0.2",
-    "chalk": "^5.3.0",
+    "chalk": "^5.4.1",
     "commander": "^12.0.0",
     "esbuild": "^0.21.5",
     "figlet": "^1.7.0",
+    "form-data": "^4.0.2",
     "glob": "^10.3.10",
     "hono": "^4.5.0",
+    "inquirer": "^12.4.3",
     "install": "^0.13.0",
+    "node-fetch": "^3.3.2",
     "open": "^10.1.0",
     "openai-zod-functions": "^0.1.2",
+    "ora": "^8.2.0",
     "os": "^0.1.2",
     "pumpdotfun-sdk": "^1.3.2",
     "zod": "^3.23.8",
