--- a/package.json
+++ b/package.json
@@ -34,8 +34,9 @@
   "dependencies": {
     "@acusti/parsing": "^0.14.3",
     "@cloudflare/ai-utils": "^1.0.1",
-    "@cloudflare/workers-types": "^4.20240605.0",
+    "@cloudflare/workers-types": "^4.20250313.0",
     "@google/generative-ai": "^0.14.1",
+    "@modelcontextprotocol/sdk": "^1.7.0",
     "ai": "^4.0.13",
     "arg": "^5.0.2",
     "chalk": "^5.4.1",
